--- a/rabbitmq-web/listener-app.html
+++ b/rabbitmq-web/listener-app.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Testing RabbitMQ Web Stomp</title>
 
-    <!-- From: http://cdn.sockjs.org/ --> 
+    <!-- From: http://cdn.sockjs.org/ -->
     <script src="sockjs-0.3.js"></script>
 
     <!-- From RabbitMQ-Web-Stomp examples -->
@@ -21,14 +22,17 @@
     </style>
   </head>
   <body>
-
-    <h1>Waiting for messages</h1>
-
-    <div id="output">
-      <!-- incoming messages will be printed here -->
+    <div class="container" style="margin-top: 8px;">
+      <div class="row">
+        <div class="col-lg-4"><img src="https://d0.awsstatic.com/events/aws-hosted-events/2016/APAC/Summit-06/India/BlazeClan%20Logo.jpg" width="200px" height="95px"></div>
+        <div class="col-lg-4"><img src="https://cdn.worldvectorlogo.com/logos/docker.svg" width="200px" height="95px"></div>
+        <div class="col-lg-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/AmazonWebservices_Logo.svg/2000px-AmazonWebservices_Logo.svg.png" width="240px" height="85px"></div>
+      </div>
+      <hr/>
+      <h1>Waiting for messages</h1>
+      <div id="output">
+        <!-- incoming messages will be printed here -->
+      </div>
     </div>
-
-    </script>
   </body>
 </html>
-
