--- a/rabbitmq-web/listener-app.html
+++ b/rabbitmq-web/listener-app.html
@@ -24,9 +24,9 @@
   <body>
     <div class="container" style="margin-top: 8px;">
       <div class="row">
-        <div class="col-lg-4"><img src="https://d0.awsstatic.com/events/aws-hosted-events/2016/APAC/Summit-06/India/BlazeClan%20Logo.jpg" width="200px" height="95px"></div>
-        <div class="col-lg-4"><img src="https://cdn.worldvectorlogo.com/logos/docker.svg" width="200px" height="95px"></div>
-        <div class="col-lg-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/AmazonWebservices_Logo.svg/2000px-AmazonWebservices_Logo.svg.png" width="240px" height="85px"></div>
+        <div class="col-lg-4 col-md-4"><img src="https://d0.awsstatic.com/events/aws-hosted-events/2016/APAC/Summit-06/India/BlazeClan%20Logo.jpg" width="200px" height="95px"></div>
+        <div class="col-lg-4 col-md-4"><img src="https://cdn.worldvectorlogo.com/logos/docker.svg" width="200px" height="95px"></div>
+        <div class="col-lg-4 col-md-4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/AmazonWebservices_Logo.svg/2000px-AmazonWebservices_Logo.svg.png" width="240px" height="85px"></div>
       </div>
       <hr/>
       <h1>Waiting for messages</h1>
